k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-demo-app
  namespace: 13th
  labels:
    app: argocd-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: argocd-demo
  template:
    metadata:
      labels:
        app: argocd-demo
    spec:
      containers:
      - name: nginx
        image: baohq3/argocd-demo:latest  # Thay đổi này
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
