k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-demo-service
  namespace: 13th
spec:
  type: NodePort  # Hoặc LoadBalancer for cloud
  selector:
    app: argocd-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080  # Uncomment nếu dùng NodePort
